--- a/systems/turingpi/kubernetes/infrastructure/kustomization.yaml
+++ b/systems/turingpi/kubernetes/infrastructure/kustomization.yaml
@@ -1,9 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - helm-repositories.yaml
-  - namespaces.yaml
-  - ingress-nginx.yaml
+  - longhorn
 # Add more infrastructure components as needed
 # Add infrastructure components here, like:
 # - metrics-server
