--- a/systems/turingpi/kubernetes/infrastructure/longhorn/helmrelease.yaml
+++ b/systems/turingpi/kubernetes/infrastructure/longhorn/helmrelease.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: longhorn
-      version: "1.5.x"
+      version: "1.8.1"
       sourceRef:
         kind: HelmRepository
         name: longhorn
