feat: configure fresh Talos cluster with Longhorn optimizations
- Clean up old cluster configuration and regenerate fresh
- Configure SOPS encryption with age keys
- Update Talos config for v1.10.6 with Longhorn support
- Optimize Longhorn HelmRelease for 4-node cluster
- Add deployment and setup automation scripts
- Update node IPs to match current network configuration
- Add proper gitignore for sensitive files

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Talos cluster sensitive files
+systems/turingpi/talos/age-key.txt
+systems/turingpi/talos/talsecret.sops.yaml
+systems/turingpi/talos/.sops.yaml
+systems/turingpi/talos/clusterconfig/
