--- a/.gitignore
+++ b/.gitignore
@@ -11,15 +11,14 @@ crash.*.log
 
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
 # password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
-# to change depending on the environment.
+# change depending on the environment.
 *.tfvars
 *.tfvars.json
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
 override.tf
-override.tf.json
+override_override.tf
 *_override.tf
 *_override.tf.json
 
@@ -41,3 +40,7 @@ systems/turingpi/talos/age-key.txt
 systems/turingpi/talos/talsecret.sops.yaml
 systems/turingpi/talos/.sops.yaml
 systems/turingpi/talos/clusterconfig/
+
+# MCP environment files (contain sensitive tokens)
+.env.mcp
+github-mcp-wrapper.sh
