Add fan control DaemonSet to reduce RK1 node noise

--- a/systems/turingpi/kubernetes/infrastructure/kustomization.yaml
+++ b/systems/turingpi/kubernetes/infrastructure/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - longhorn
+  - fan-control
 # Add more infrastructure components as needed
 # Add infrastructure components here, like:
 # - metrics-server
