--- a/systems/turingpi/kubernetes/infrastructure/fan-control/daemonset.yaml
+++ b/systems/turingpi/kubernetes/infrastructure/fan-control/daemonset.yaml
@@ -35,27 +35,77 @@ spec:
           # Enable PWM control first
           echo 1 > /sys/devices/platform/pwm-fan/hwmon/hwmon1/pwm1_enable 2>/dev/null || true
           
-          # Set fan speed to quieter level (100 out of 255)
-          echo 100 > /sys/devices/platform/pwm-fan/hwmon/hwmon1/pwm1 2>/dev/null || true
+          # Temperature thresholds (in millidegrees Celsius)
+          TEMP_LOW=45000    # 45°C - start fans
+          TEMP_HIGH=65000   # 65°C - max fans
+          TEMP_CRITICAL=80000 # 80°C - emergency cooling
           
-          echo "Fan control initialized - PWM enabled, speed set to 100"
+          # Fan speed mapping
+          FAN_OFF=0
+          FAN_LOW=80        # 30% speed for low temp
+          FAN_MED=150       # 60% speed for medium temp
+          FAN_HIGH=200      # 80% speed for high temp
+          FAN_MAX=255       # 100% speed for critical temp
           
-          # Keep container running to maintain fan settings
+          echo "Smart fan control initialized - temperature thresholds: ${TEMP_LOW}°C (start), ${TEMP_HIGH}°C (max), ${TEMP_CRITICAL}°C (emergency)"
+          
+          # Function to get current temperature
+          get_temp() {
+            cat /sys/class/thermal/thermal_zone0/temp 2>/dev/null || echo "0"
+          }
+          
+          # Function to set fan speed
+          set_fan_speed() {
+            local speed=$1
+            echo $speed > /sys/devices/platform/pwm-fan/hwmon/hwmon1/pwm1 2>/dev/null || true
+          }
+          
+          # Function to determine fan speed based on temperature
+          get_fan_speed() {
+            local temp=$1
+            
+            if [ $temp -lt $TEMP_LOW ]; then
+              echo $FAN_OFF
+            elif [ $temp -lt $TEMP_HIGH ]; then
+              echo $FAN_LOW
+            elif [ $temp -lt $TEMP_CRITICAL ]; then
+              echo $FAN_MED
+            else
+              echo $FAN_HIGH
+            fi
+          }
+          
+          # Main fan control loop
           while true; do
-            sleep 300
-            # Re-apply fan settings every 5 minutes in case they get reset
-            echo 100 > /sys/devices/platform/pwm-fan/hwmon/hwmon1/pwm1 2>/dev/null || true
-            echo "Fan speed maintained at 100"
+            current_temp=$(get_temp)
+            target_speed=$(get_fan_speed $current_temp)
+            
+            # Only change fan speed if it's different
+            current_speed=$(cat /sys/devices/platform/pwm-fan/hwmon/hwmon1/pwm1 2>/dev/null || echo "0")
+            
+            if [ "$current_speed" != "$target_speed" ]; then
+              set_fan_speed $target_speed
+              echo "Temp: ${current_temp}°C -> Fan: ${target_speed}/255"
+            fi
+            
+            # Check every 10 seconds for temperature changes
+            sleep 10
           done
         securityContext:
           privileged: true
         volumeMounts:
         - name: sysfs
           mountPath: /sys
+        - name: thermal
+          mountPath: /sys/class/thermal
       volumes:
       - name: sysfs
         hostPath:
           path: /sys
+          type: Directory
+      - name: thermal
+        hostPath:
+          path: /sys/class/thermal
           type: Directory
       # Restart policy for the pod
       restartPolicy: Always
