Add NGINX ingress controller and LGTM service ingress rules

--- a/systems/turingpi/kubernetes/infrastructure/kustomization.yaml
+++ b/systems/turingpi/kubernetes/infrastructure/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - longhorn
   - fan-control
+  - ingress-nginx
   - lgtm
 # Add more infrastructure components as needed
 # Add infrastructure components here, like:
