--- a/systems/turingpi/kubernetes/infrastructure/ingress-nginx/kustomization.yaml
+++ b/systems/turingpi/kubernetes/infrastructure/ingress-nginx/kustomization.yaml
@@ -1,9 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace
-  - loki
-  - grafana
-  - tempo
-  - mimir
-  - ingress
+  - namespace.yaml
+  - helmrepository.yaml
+  - helmrelease.yaml
