--- a/systems/turingpi/kubernetes/infrastructure/lgtm/ingress/kustomization.yaml
+++ b/systems/turingpi/kubernetes/infrastructure/lgtm/ingress/kustomization.yaml
@@ -1,9 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace
-  - loki
-  - grafana
-  - tempo
-  - mimir
-  - ingress
+  - ingress.yaml
