Reorganize ingress structure: centralize ingress management and fix YAML duplicates
- Move ingress-nginx controller to ingress/controllers/nginx/
- Move LGTM ingress rules to ingress/rules/lgtm/
- Add Longhorn dashboard ingress rules
- Create centralized ingress kustomization
- Fix duplicate keys in Loki and Mimir HelmReleases
- Decouple LGTM stack from ingress configuration
- Improve organization for future Traefik migration

--- a/systems/turingpi/kubernetes/infrastructure/kustomization.yaml
+++ b/systems/turingpi/kubernetes/infrastructure/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - longhorn
   - fan-control
-  - ingress-nginx
+  - ingress
   - lgtm
 # Add more infrastructure components as needed
 # Add infrastructure components here, like:
