Fix ingress-nginx container permission issue by disabling readOnlyRootFilesystem

--- a/systems/turingpi/kubernetes/infrastructure/ingress/controllers/nginx/helmrelease.yaml
+++ b/systems/turingpi/kubernetes/infrastructure/ingress/controllers/nginx/helmrelease.yaml
@@ -41,7 +41,7 @@ spec:
         capabilities:
           drop:
             - ALL
-        readOnlyRootFilesystem: true
+        readOnlyRootFilesystem: false
       nodeSelector:
         node-role.kubernetes.io/worker: "true"
       tolerations:
