Fix ingress-nginx security context: allow root user to resolve permission issues

--- a/systems/turingpi/kubernetes/infrastructure/ingress/controllers/nginx/helmrelease.yaml
+++ b/systems/turingpi/kubernetes/infrastructure/ingress/controllers/nginx/helmrelease.yaml
@@ -34,8 +34,8 @@ spec:
         enabled: false
       podSecurityContext:
         fsGroup: 101
-        runAsNonRoot: true
-        runAsUser: 101
+        runAsNonRoot: false
+        runAsUser: 0
       containerSecurityContext:
         allowPrivilegeEscalation: false
         capabilities:
