--- a/systems/turingpi/kubernetes/infrastructure/ingress/rules/longhorn/ingress.yaml
+++ b/systems/turingpi/kubernetes/infrastructure/ingress/rules/longhorn/ingress.yaml
@@ -4,7 +4,6 @@ metadata:
   name: longhorn-dashboard
   namespace: longhorn-system
   annotations:
-    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
@@ -14,6 +13,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
     nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "1024m"
 spec:
+  ingressClassName: nginx
   rules:
     - host: longhorn.turingpi.local
       http:
