Fix node selectors: use explicit worker label value for all LGTM services

--- a/systems/turingpi/kubernetes/infrastructure/lgtm/mimir/helmrelease.yaml
+++ b/systems/turingpi/kubernetes/infrastructure/lgtm/mimir/helmrelease.yaml
@@ -127,7 +127,7 @@ spec:
               - ALL
           readOnlyRootFilesystem: true
         nodeSelector:
-          node-role.kubernetes.io/worker: ""
+          node-role.kubernetes.io/worker: "true"
         tolerations:
           - key: node-role.kubernetes.io/control-plane
             operator: Exists
