--- a/systems/turingpi/kubernetes/infrastructure/lgtm/tempo/helmrelease.yaml
+++ b/systems/turingpi/kubernetes/infrastructure/lgtm/tempo/helmrelease.yaml
@@ -92,8 +92,8 @@ spec:
           drop:
             - ALL
         readOnlyRootFilesystem: true
-      nodeSelector:
-        node-role.kubernetes.io/worker: ""
+              nodeSelector:
+          node-role.kubernetes.io/worker: "true"
       tolerations:
         - key: node-role.kubernetes.io/control-plane
           operator: Exists
